feat: add circuit breaker metrics bridge and standardize observability across services

--- a/observability/docker-compose.observability.yml
+++ b/observability/docker-compose.observability.yml
@@ -126,6 +126,9 @@ services:
   kafka_exporter:
     image: danielqsj/kafka-exporter:latest
     container_name: huleedu_kafka_exporter
+    depends_on:
+      kafka:
+        condition: service_healthy
     networks:
       - huleedu_internal_network
     ports:
