--- a/services/spell_checker_service/alembic.ini
+++ b/services/spell_checker_service/alembic.ini
@@ -1,6 +1,7 @@
 [alembic]
-script_location = services/class_management_service/alembic
-sqlalchemy.url = postgresql+asyncpg://user:password@localhost/huledu_class_management
+script_location = alembic
+# Database URL will be dynamically loaded from service configuration in env.py
+# sqlalchemy.url = postgresql+asyncpg://user:pass@localhost:5437/spellchecker
 
 [loggers]
 keys = root,sqlalchemy,alembic
@@ -35,3 +36,6 @@ formatter = generic
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
 datefmt = %H:%M:%S
+
+# Post-write hook to format files with ruff
+# file_template = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s
