--- a/services/cj_assessment_service/pyproject.toml
+++ b/services/cj_assessment_service/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "SQLAlchemy[asyncio]",
     "aiosqlite",  # For unit tests with in-memory DB
     "asyncpg",    # For PostgreSQL in production/E2E tests
+    "alembic",    # Database migrations
     # CJ-specific dependencies
     "cachetools",
     "diskcache",
@@ -55,6 +56,14 @@ huleedu-service-libs = "file:///app/services/libs"
 
 [tool.pdm.scripts]
 start = "python app.py"
+
+# Alembic database migration commands
+migrate-upgrade = "alembic upgrade head"
+migrate-downgrade = "alembic downgrade -1"
+migrate-revision = "alembic revision --autogenerate"
+migrate-history = "alembic history"
+migrate-current = "alembic current"
+migrate-stamp = "alembic stamp head"
 
 [tool.mypy]
 python_version = "3.11"
