--- a/services/result_aggregator_service/pyproject.toml
+++ b/services/result_aggregator_service/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "huleedu-service-libs",
     "SQLAlchemy[asyncio]",
     "asyncpg",
+    "alembic",  # Database migrations
 ]
 
 [build-system]
@@ -38,6 +39,14 @@ huleedu-service-libs = "file:///app/services/libs"
 [tool.pdm.scripts]
 start = "python app.py"
 dev = "quart --app app:app --debug run -p 4003"
+
+# Alembic database migration commands
+migrate-upgrade = "alembic upgrade head"
+migrate-downgrade = "alembic downgrade -1"
+migrate-revision = "alembic revision --autogenerate"
+migrate-history = "alembic history"
+migrate-current = "alembic current"
+migrate-stamp = "alembic stamp head"
 
 [project.optional-dependencies]
 development = [
