feat: implement type-safe HuleEduApp class to replace setattr/getattr patterns

--- a/services/libs/mypy.ini
+++ b/services/libs/mypy.ini
@@ -25,5 +25,29 @@ ignore_missing_imports = true
 [mypy-opentelemetry.*]
 ignore_missing_imports = true
 
+[mypy-sqlalchemy.*]
+ignore_missing_imports = true
+
+[mypy-pydantic.*]
+ignore_missing_imports = true
+
+[mypy-quart.*]
+ignore_missing_imports = true
+
+[mypy-fastapi.*]
+ignore_missing_imports = true
+
+[mypy-pytest.*]
+ignore_missing_imports = true
+
 [mypy-huleedu_common_core.*]
+ignore_missing_imports = true
+
+[mypy-common_core.*]
+ignore_missing_imports = true
+
+[mypy-dishka.*]
+ignore_missing_imports = true
+
+[mypy-starlette.*]
 ignore_missing_imports = true
