refactor: update relative imports to absolute paths across services

--- a/services/libs/pyproject.toml
+++ b/services/libs/pyproject.toml
@@ -15,6 +15,10 @@ dependencies = [
     "opentelemetry-api",
     "opentelemetry-sdk",
     "opentelemetry-exporter-otlp",
+    # Dependencies for type-safe HuleEduApp and database modules
+    "sqlalchemy[asyncio]>=2.0.0",
+    "quart>=0.19.0",
+    "prometheus-client",
 ]
 
 [build-system]
