--- a/services/libs/mypy.ini
+++ b/services/libs/mypy.ini
@@ -8,6 +8,7 @@ explicit_package_bases = true
 namespace_packages = true
 no_site_packages = true
 ignore_errors = false
+plugins = pydantic.mypy
 
 # External libraries without official type stubs
 [mypy-aiokafka.*]
