feat: implement SELECT FOR UPDATE in essay state updates to prevent race conditions

--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -307,6 +307,7 @@ services:
       - ELS_DB_PASSWORD=${HULEEDU_DB_PASSWORD}
       - LOG_LEVEL=INFO
       - ESSAY_LIFECYCLE_SERVICE_REDIS_URL=redis://redis:6379
+      - ESSAY_LIFECYCLE_SERVICE_DISABLE_IDEMPOTENCY=false
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
       - OTEL_SERVICE_NAME=essay_lifecycle_worker
       - OTEL_TRACES_EXPORTER=otlp
