--- a/services/libs/mypy.ini
+++ b/services/libs/mypy.ini
@@ -11,6 +11,9 @@ ignore_errors = false
 plugins = pydantic.mypy
 
 # External libraries without official type stubs
+[mypy-aiohttp.*]
+ignore_missing_imports = true
+
 [mypy-aiokafka.*]
 ignore_missing_imports = true
 
