refactor: improve error correlation tracking in event processor

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -166,6 +166,7 @@ warn_unused_configs = true
 check_untyped_defs = true
 explicit_package_bases = true
 namespace_packages = true
+plugins = ["pydantic.mypy"]
 exclude = [
     "common_core/src/",
     "cj_essay_assessment/",
