refactor: consolidate test fixtures to use production models with PostgreSQL

--- a/services/spellchecker_service/alembic.ini
+++ b/services/spellchecker_service/alembic.ini
@@ -3,6 +3,10 @@ script_location = alembic
 # Database URL will be dynamically loaded from service configuration in env.py
 # sqlalchemy.url = postgresql+asyncpg://user:pass@localhost:5437/spellchecker
 
+# sys.path path, will be prepended to sys.path if present.
+# defaults to the current working directory.
+prepend_sys_path = ../..
+
 [loggers]
 keys = root,sqlalchemy,alembic
 
