--- a/services/cj_assessment_service/alembic.ini
+++ b/services/cj_assessment_service/alembic.ini
@@ -45,10 +45,10 @@ output_encoding = utf-8
 # sqlalchemy.url = driver://user:pass@localhost/dbname
 
 [post_write_hooks]
-# Post-write hook for formatting with ruff
+# Post-write hook for formatting with ruff  
 hooks = ruff_format
-ruff_format.type = console_scripts
-ruff_format.entrypoint = ruff
+ruff_format.type = exec
+ruff_format.executable = ../../.venv/bin/ruff
 ruff_format.options = format REVISION_SCRIPT_FILENAME
 
 # Logging configuration
