--- a/docker-compose.infrastructure.yml
+++ b/docker-compose.infrastructure.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "5432:5432"
+      - "5438:5432"  # Use unique port to avoid conflict with local PostgreSQL
     environment:
       - POSTGRES_DB=batch_orchestrator
       - POSTGRES_USER=${HULEEDU_DB_USER}
