refactor: standardize DATABASE_URL usage and add callback topic to LLM requests

--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -211,6 +211,8 @@ services:
       - BATCH_ORCHESTRATOR_DB_NAME=batch_orchestrator
       - BATCH_ORCHESTRATOR_DB_USER=${HULEEDU_DB_USER}
       - BATCH_ORCHESTRATOR_DB_PASSWORD=${HULEEDU_DB_PASSWORD}
+      - HULEEDU_DB_USER=${HULEEDU_DB_USER}
+      - HULEEDU_DB_PASSWORD=${HULEEDU_DB_PASSWORD}
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
       - OTEL_SERVICE_NAME=batch_orchestrator_service
       - OTEL_TRACES_EXPORTER=otlp
